// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkRating should correctly handling values higher than 5 when rating scale is zero to five 1`] = `
<DocumentFragment>
  <div
    aria-label="10 Super, smashing, great"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--high-rating"
    >
      5
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Smashing
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        Doubleplusgood
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should correctly handling values higher than 10 when rating scale is zero to ten 1`] = `
<DocumentFragment>
  <div
    aria-label="15 Amazing brilliant"
    class="bpk-rating custom-classname"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--high-rating"
    >
      10
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Amazing
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        Brilliant
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should correctly handling values lower than 0 1`] = `
<DocumentFragment>
  <div
    aria-label="-1.3 Low bad option"
    class="bpk-rating custom-classname"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--low-rating"
    >
      0
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Low
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        Bad option
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render a high score rating component (zero to five scale) 1`] = `
<DocumentFragment>
  <div
    aria-label="4 Amazing best thing since sliced bread"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--high-rating"
    >
      4.0
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Amazing
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        Best thing since sliced bread
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render a high score rating component (zero to ten scale) 1`] = `
<DocumentFragment>
  <div
    aria-label="9 Amazing best thing since sliced bread"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--high-rating"
    >
      9.0
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Amazing
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        Best thing since sliced bread
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render a high score rating component 1`] = `
<DocumentFragment>
  <div
    aria-label="9 Amazing best thing since sliced bread"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--high-rating"
    >
      9.0
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Amazing
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        Best thing since sliced bread
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render a large rating component 1`] = `
<DocumentFragment>
  <div
    aria-label="9 Excellent would recommend"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--lg bpk-text--bold bpk-rating__component bpk-rating--lg-rating bpk-rating--high-rating"
    >
      9.0
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--lg bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Excellent
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--sm bpk-rating__text bpk-rating__text--horizontal"
      >
        This place was amazing
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render a low score rating component 1`] = `
<DocumentFragment>
  <div
    aria-label="1.3 Low bad option"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--low-rating"
    >
      1.3
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Low
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        Bad option
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render a medium score rating component (zero to five scale) 1`] = `
<DocumentFragment>
  <div
    aria-label="3 Average it's ok at best"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--medium-rating"
    >
      3.0
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Average
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        It's ok at best
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render a medium score rating component (zero to ten scale) 1`] = `
<DocumentFragment>
  <div
    aria-label="7 Average it's ok at best"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--medium-rating"
    >
      7.0
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Average
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        It's ok at best
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render a small rating component 1`] = `
<DocumentFragment>
  <div
    aria-label="9 Excellent would recommend"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--sm bpk-text--bold bpk-rating__component bpk-rating--sm-rating bpk-rating--high-rating"
    >
      9.0
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--sm bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Excellent
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        This place was amazing
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="6.7 Average might recommend"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--medium-rating"
    >
      6.7
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Average
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        Might recommend
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render correctly pill rating 1`] = `
<DocumentFragment>
  <div
    aria-label="6.7 Average might recommend"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--base-pill bpk-rating--medium-rating"
    >
      6.7
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Average
        </strong>
         
        <span>
          Might recommend
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render correctly title only pill rating 1`] = `
<DocumentFragment>
  <div
    aria-label="6.7 Average might recommend"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--base-pill bpk-rating--medium-rating"
    >
      6.7
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Average
        </strong>
         
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render title only correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="6.7 Average might recommend"
    class="bpk-rating"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--medium-rating"
    >
      6.7
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Average
        </strong>
         
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render vertical rating correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="6.7 Average might recommend"
    class="bpk-rating bpk-rating--vertical"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--medium-rating"
    >
      6.7
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--vertical"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--vertical"
      >
        <strong>
          Average
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--vertical"
      >
        Might recommend
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should support custom class names 1`] = `
<DocumentFragment>
  <div
    aria-label="6.7 Average might recommend"
    class="bpk-rating custom-classname"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--base bpk-text--bold bpk-rating__component bpk-rating--base-rating bpk-rating--medium-rating"
    >
      6.7
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--horizontal"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--base bpk-rating__text bpk-rating__text--horizontal"
      >
        <strong>
          Average
        </strong>
         
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--xs bpk-rating__text bpk-rating__text--horizontal"
      >
        Might recommend
      </span>
    </div>
  </div>
</DocumentFragment>
`;
